# ModernCpp

./: named_vector.cpp
Homeworks/homework_1/task_1/: commands.sh
Homeworks/homework_2/task1/: guessing_task1.cpp  task_1
Homeworks/homework_2/task2/: parameters_task2.cpp  task_2
Homeworks/homework_3/: CMakeLists.txt
Homeworks/homework_3/code/: html_writer.cpp  image_browser.cpp  main.cpp
Homeworks/homework_4/: named_vector.cpp
Homeworks/homework_5/: CMakeLists.txt  main
Homeworks/homework_5/include/: homework_5.h
Homeworks/homework_5/src/: convert_dataset.cpp  main.cpp  serialize.cpp
homework_6/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
